# aruco-AR

./: .gitignore  .gitmodules  5inrow.sln  CMakeLists.txt  README.md
5inrow/: 5inrow.vcxproj  5inrow.vcxproj.filters
5inrow/src/: aruco.cpp
src/: main.cpp
